test-cases/negative/test_114_nested_expect_error.lay
# negative test: nested expect error (should be invalid)
# expected: parser should reject this or handle correctly

expect error
  expect error
    throw 'nested'
  with message 'nested'
with message 'outer'


